--- a/Greip/Base.lproj/LaunchScreen.storyboard
+++ b/Greip/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,16 +14,12 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="crash_n_burn.png" translatesAutoresizingMaskIntoConstraints="NO" id="YA5-VW-EBX">
-                                <rect key="frame" x="0.0" y="146" width="375" height="375"/>
+                                <rect key="frame" x="0.0" y="156" width="375" height="375"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="YA5-VW-EBX" secondAttribute="height" multiplier="1:1" id="3TD-08-udc"/>
                                 </constraints>
@@ -30,10 +27,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="YA5-VW-EBX" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="5eB-tH-ca8"/>
-                            <constraint firstItem="YA5-VW-EBX" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="t0T-bM-Oe0"/>
-                            <constraint firstItem="YA5-VW-EBX" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="u3a-Uz-M0t"/>
+                            <constraint firstItem="YA5-VW-EBX" firstAttribute="centerY" secondItem="XNn-VR-5Nr" secondAttribute="centerY" id="5eB-tH-ca8"/>
+                            <constraint firstItem="YA5-VW-EBX" firstAttribute="width" secondItem="XNn-VR-5Nr" secondAttribute="width" id="t0T-bM-Oe0"/>
+                            <constraint firstItem="YA5-VW-EBX" firstAttribute="centerX" secondItem="XNn-VR-5Nr" secondAttribute="centerX" id="u3a-Uz-M0t"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="XNn-VR-5Nr"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
